Row gap fix

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h1{
   grid-template-columns: repeat(3,1fr);
   grid-auto-rows: 1fr;
   column-gap: 5px;
-  row-gap: 5px;
+  row-gap: 1px;
   width:1600px;
 }
 
